environment.yml CHANGES! |  #66 /faiss/getNN/multiple, /faiss/getNN, /upload now return the cluster centers of the NN | #67 implemented bundled database search for column projections
